<resources>
    <!-->Drawer strings<-->
    <string name="app_name">TryToMeet</string>
    <string name="drawer_menu_create_event">Create an event</string>
    <string name="profile">Profile</string>
    <string name="favorite_sites">Favorite sites</string>
    <string name="friends">Friends</string>
    <string name="log_out">Log out</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="drawer_menu_event">Events</string>
    <string name="drawer_menu_historic">Past events</string>

    <string name="new_group_title">New group</string>
    <string name="groups_title">Groups</string>
    <string name="group_name">Group name</string>
    <string name="member_added">Friend added to the group</string>

    <!--Find Place-->
    <string name="places_nearToMe">Near to me</string>
    <string name="places_favorites">Favourites</string>
    <string name="places_filter">Filter</string>
    <string name="places_placeHint">Introduce a name for the place</string>
    <string name="delete_site">Are you sure you want to delete this site?</string>
    <string name="added_favorite">Added favourite site.</string>

    <string name="confirm_event">Confirm event</string>
    <string name="event_confimed">The event is now confirmed</string>
    <string name="create_event_title">Title</string>
    <string name="create_event_title_hint">Insert the title of your event</string>
    <string name="create_event_description_hint">Insert the description of your event</string>
    <string name="create_event_find_place_button">Find a place</string>
    <string name="create_event_change_place_button">Change your place</string>
    <string name="create_event_possible_dates_title">Possible dates</string>
    <string name="create_event_add_a_date_button">Add a date</string>
    <string name="create_event_participants_title">Participants</string>
    <string name="create_event_add_a_participant_button">Add a participant</string>
    <string name="create_event_friend_title">Friend</string>
    <string name="create_event_image">Image</string>
    <string name="create_event_add_a_friend_button">Add a friend</string>
    <string name="create_event_add_a_group_button">Add a group</string>
    <string name="create_event_missing_title">A title is needed</string>
    <string name="create_event_missing_description">A description is needed</string>
    <string name="create_event_missing_place">A place is needed</string>
    <string name="create_event_missing_dates">At least one date is needed</string>
    <string name="create_event_missing_participants">At least one participant is needed</string>
    <string name="add_friend_filter">Friend\'s email:</string>
    <string name="add_participant_filter">Friend\'s name:</string>
    <string name="add_participant_filter_hint">Insert your friend\'s name to filter</string>
    <string name="confirm_date">Select one date to confirm</string>


    <string name="add_group_filter">Group\'s name:</string>
    <string name="add_group_filter_hint">Insert the group\'s name to filter</string>

    <string name="added_friend_successfull">Friend added successfully</string>
    <string name="added_friend_fail">Failed to add that friend</string>

    <string name="removed_friend_successfull">Friend removed successfully</string>
    <string name="removed_friend_fail">Failed to remove that friend</string>

    <string name="noFriends">You have no friends yet</string>

    <string name="noFriendsToAddToGroup">You dont have friends to add to this group</string>

    <string name="exit_group_title">Exit group</string>
    <string name="exit_group_message">Are you sure you want to exit from this group?</string>

    <string name="add_as_a_friend">Add as a friend</string>
    <string name="remove_friend">Remove friend</string>
    <string name="no_friends">Yo don\'t have any friend</string>


    <!-->Common<-->
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="select">Select</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="ok">Ok</string>
    <string name="edit">Edit</string>
    <string name="alert">Alert</string>
    <string name="confirm">Confirm</string>
    <string name="continuee">Continue</string>

    <!-->Notification <-->
    <string name="create_event_notification_title">Added to a new event</string>
    <string name="create_event_notification_text">%1$s has added you to the event %2$s</string>
    <string name="added_to_a_group_notification_title">Added to a new group</string>
    <string name="added_to_a_group_notification_text">%1$s has added you to the group %2$s</string>
    <string name="event_confirmate_notification_title">An event has been confirmated</string>
    <string name="event_confirmate_notification_text">The event %1$s has been confirmated</string>
    <string name="comment_added_notification_title">A new comment has been made</string>
    <string name="comment_added_notification_text">The user %1$s has commented on the event %2$s</string>
    <string name="image_uploaded_notification_title">A new image has been uploaded</string>
    <string name="image_uploaded_notification_text">The user %1$s has uploaded an image to the event %2$s</string>
    <string name="enable_notifications">Enable notifications</string>


    <!-->Map activity<-->
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <!-- Errors -->
    <string name="error_occured">An error occured</string>
    <string name="error_network">Cannot connect to Internet...Please check your connection!</string>
    <string name="error_server">The server could not be found. Please try again after some time!!</string>
    <string name="error_authorization">Cannot connect to Internet...Please check your authorization permissions!</string>
    <string name="error_parsing">Parsing error! Please contact with your system provider</string>
    <string name="error_noconnection">Cannot connect to Internet...Please establish a connection!</string>
    <string name="error_timeot">Connection TimeOut! Please check your internet connection.</string>

    <!--Filter dialog-->
    <string name="bar">Bar</string>
    <string name="park">Park</string>
    <string name="shops">Shopping Mall</string>
    <string name="ration">Search ratio</string>
    <string name="site_type">Place type:</string>

    <!--Facebook-->
    <string name="facebook_app_id" translatable="false">615456122132608</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb615456122132608</string>

    <!--Event-->
    <string name="event_show_map">Show map</string>
    <string name="event_hide_map">Hide map</string>
    <string name="add_comment">Add comment</string>
    <string name="show_images">Show images</string>
    <string name="add_image">Add image</string>
    <string name="cancel_event">Cancel event</string>
    <string name="dialog_cancel_event">Are you sure you want to cancel this event?</string>
    <string name="delete_history">Delete from history</string>
    <string name="leave_event">Leave event</string>
    <string name="sure_Delete_History">Are you sure you want to delete this event from the history?</string>
    <string name="sure_Leave_Event">Are you sure you want to leave this event?</string>
    <string name="event_description">Description</string>
    <string name="event_participants">Participants</string>
    <string name="event_dates">Dates</string>
    <string name="event_comments">Comments</string>
    <string name="event_no_comments">There are no comments.</string>
    <string name="no_event_list">Yo don\'t have any event</string>

    <!--Group-->
    <string name="group_added">Group added</string>
    <string name="group_missing_name">You should name this group</string>
    <string name="group_missing_participants">The group should have at least one member</string>

    <!--Titles-->
    <string name="Events_title">Events</string>
    <string name="Events_New_title">New events</string>
    <string name="Profile_title">Profile</string>
    <string name="Friends_title">Friends</string>
    <string name="Create_an_event_title">Create an event</string>
    <string name="Favorite_sites_title">Favorite sites</string>
    <string name="Groups_title">Groups</string>
    <string name="Past_events_title">Past events</string>

</resources>
