<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/drawer_menu_create_event"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/drawer_menu_create_event"
        app:showAsAction="always" />
    <item
        android:id="@+id/drawer_menu_favorite_sites"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/favorite_sites"
        app:showAsAction="always" />

    <item
        android:id="@+id/log_out"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/log_out"
        app:showAsAction="always" />
</menu>