<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/map_linear_layout"
    tools:context="com.sdm.trytomeet.fragments.Sites.FindPlaceFragment"
    android:orientation="vertical">

    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/near_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/places_nearToMe"
            />

        <Button
            android:id="@+id/favorites_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/places_favorites"/>

        <Button
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/places_filter"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="350dp">
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.sdm.trytomeet.fragments.Sites.FindPlaceFragment" />
    </LinearLayout>

    <EditText
        android:id="@+id/namePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/places_placeHint"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/continuee"/>
    </LinearLayout>
</LinearLayout>