<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_create_event"
    tools:context="com.sdm.trytomeet.fragments.CreateEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="24"
                android:gravity="center"
                android:text="@string/create_event_title" />

            <EditText
                android:id="@+id/create_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_event_title_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/create_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_event_description_hint"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_find_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_event_find_place_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@android:drawable/btn_star_big_on" />

                    <TextView
                        android:id="@+id/selectedPlace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="AQUI IRA EL NOMBRE DEL SITIO" />
                </LinearLayout>

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_event_change_place_button" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_event_possible_dates_title" />

            <ListView
                android:id="@+id/date_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_add_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_event_add_a_date_button" />

            <View
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_event_participants_title" />

            <ListView
                android:id="@+id/participant_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_add_participant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_event_add_a_participant_button" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
