<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_create_event"
    tools:context="com.sdm.trytomeet.fragments.CreateEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="24"
                android:gravity="center"
                android:text="@string/new_group_title" />

            <EditText
                android:id="@+id/groupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/group_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_event_participants_title" />

            <ListView
                android:id="@+id/participant_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_add_participant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_event_add_a_participant_button" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
